Fixed section spacing on Landing

--- a/src/screens/Landing/Blogs/Blogs.module.css
+++ b/src/screens/Landing/Blogs/Blogs.module.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     min-height: 100vh;
     /* background-color: #E8EAED; */
+    margin: 8px 0;
 }
 
 .title {
@@ -23,10 +24,9 @@
     justify-content: center;
     align-items: center;
 }
-
 .carousel a {
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 
 .btnContainer {
