--- a/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
+++ b/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
+    margin: 8px 0;
 }
 
 .header {
