--- a/src/screens/Landing/Testimonials/Testimonials.module.css
+++ b/src/screens/Landing/Testimonials/Testimonials.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
+    margin: 8px 0;
 }
 
 .title {
