--- a/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
+++ b/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     min-height: 100vh;
     justify-content: center;
+    margin: 8px 0;
 }
 
 .whyText {
